# jukeb0x

./: .gitignore  CMakeLists.txt  README.md  config.yaml  music.db  urls.txt  vcpkg.json
cmake/: CompilerWarnings.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  version.hpp.in
include/: db.h
include/database/: db.h  sqlite.h
include/jukeb0x/database/: db.h
include/jukeb0x/music/: music.h
include/jukeb0x/utils/: utils.h
include/jukeb0x/wav/: wav.h
src/: db.cpp  main.cpp
src/database/: db.cpp  sqlite.cpp
src/music/: music.cpp
src/utils/: utils.cpp
src/wav/: wav.cpp
